--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity
 
-            android:name=".SplashActivity"
+            android:name=".view.OtherProfileActivity"
 
             android:exported="true">
             <intent-filter>
