--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
 
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.SignUpActivity" />
+        <activity android:name=".view.OtherProfileActivity"/>
+        <activity android:name=".view.ProfileSuggestActivity"/>
     </application>
 
 </manifest>
